--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,12 +21,13 @@ classifiers = [
     "Topic :: Software Development :: Libraries :: Python Modules"
 ]
 
-[project.dependencies]
+project.dependencies=[
 torch = ">=1.7.1"
 numpy = ">=1.19.2"
 matplotlib = ">=3.3.2"
 opencv-python = ">=4.4.0.44"
 tqdm = ">=4.50.2"
+]
 
 [tool.black]
 line-length = 88
